# opengl_musings

./: .gitconfig  4.1.lighting_maps.fs  4.1.lighting_maps.vs  CMakeLists.txt  README.md  build.sh  directional.fs.glsl  discard.fs.glsl  explode.gs.glsl  framebuffer_screen.fs.glsl  lighting.fs.glsl  lighting.vs.glsl  lighting_maps.fs.glsl  material.fs.glsl
include/: camera.h  mesh.h  model.h  shader.h  utils.h
include/glad/: glad.h
src/: blending.cpp  camera_walk_around.cpp  changing_color.cpp  coordinates.cpp  cubemap.cpp  directional.cpp  discard.cpp  explode.cpp  framebuffer.cpp  glad.c  hello_window.cpp  instancing.cpp  lighting.cpp  lighting_maps.cpp  load_model.cpp  maps.cpp  material.cpp  more_cubes.cpp  multiple_lights.cpp  point_light.cpp  position_and_color.cpp  rectangle.cpp  rotate_camera.cpp  rotating.cpp  shader.cpp  stencil.cpp  texture.cpp  transform.cpp  triangle.cpp  utils.cpp  walk_around.cpp
